repair: fixed search pipeline which caused in some conditions to show two irregular rows with huge gaps

--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -5,6 +5,7 @@
     flex-direction: row;
     justify-content: start;
     align-items: start;
+    align-content: flex-start;
     padding: 24px;
     gap: 24px;
     min-width: 1200px;
